Auth Routine
User sends a POST req to api/check_owners with email and password -> then gets verfied against api, then verfied against my database, then if successful returns email, password and role of the user (i added)
